@@ -1,6 +1,6 @@
 Package: lfactors
-Version: 1.0.1
-Date: 2017-04-18
+Version: 1.0.4
+Date: 2018-03-16
 Title: Factors with Levels
 Authors@R: c(person("Paul", "Bailey", role=c("aut", "cre"), email="pbailey@air.org"))
 Author: Paul Bailey [aut, cre]
@@ -9,11 +9,11 @@ Depends: R (>= 3.1.0)
 Imports: methods, stats, utils
 Suggests: testthat, Matrix
 Description: Provides an extension to factors called 'lfactor' that are similar
-    to factors but allow users to refer to 'lfactor' levels by either the level or
+    to factors but allows users to refer to 'lfactor' levels by either the level or
     the label.
 License: GPL-2
-RoxygenNote: 5.0.1
+RoxygenNote: 6.0.1
 NeedsCompilation: no
-Packaged: 2017-04-18 19:15:39 UTC; pbailey
+Packaged: 2018-03-16 18:28:25 UTC; pbailey
 Repository: CRAN
-Date/Publication: 2017-04-18 23:21:57 UTC
+Date/Publication: 2018-03-16 21:41:08 UTC
