@@ -1,33 +1,33 @@
-f189c983bfbab63da2de1a609f66339b *DESCRIPTION
+97420b42f15dfe0177e330701685b76d *DESCRIPTION
 93c2b7074680f19369d6be7152495b7f *NAMESPACE
 be6e90c378e4a2e44400eee9bcf98a0d *R/Ops.lfactor.R
-3160d24b106cc183353de9bb6381e9ac *R/all.R
+c1a08a44c08a1650e601140561c2e3a0 *R/all.R
 c2d3fb2427b2ad39fbf0b58e647f59c1 *R/as.double.lfactor.R
-22e8292628d2b0c41e44205a69e9f9fb *R/as.factor.lfactor.R
-49e3e492409dd44bad510390a70adf84 *R/as.integer.lfactor.R
-4ffb927ab5e843dd0edeb8ea56b91639 *R/as.numeric.lfactor.R
+8f04e0a6a69551525b727470b3c93ce2 *R/as.factor.lfactor.R
+e94b1507bd08d304929400bf7e6a667c *R/as.integer.lfactor.R
+16d13013209f29af6ff7610bf3e8166d *R/as.numeric.lfactor.R
 c5a6ac8395b4d844f9fd47c27cb85e12 *R/assign.R
-e783b6fd6cba3ea16131d71a44c2aafa *R/droplevels.R
-2d1cfd98c277192e4ae89a3f1cfdd266 *R/inlf.R
-393dfb3ae885a5a5f1850cceef6126e0 *R/lfactor.R
-2364742367138ea8815d0561c61dd18b *R/lfactors-package.R
-cfe4657c14acc33c6602ab7ff7f4bba6 *R/llevels.R
-6dd49f33f5e943c95345313fdc7fa617 *R/mlfactor.R
+e82def944aabd46ab36aebf358e7e822 *R/droplevels.R
+aabd22cafc97f6d208337eeb71206f95 *R/inlf.R
+bb20520cc2c46ee28adcbddd5f547024 *R/lfactor.R
+92c819739dc1733822ef58b3099709f5 *R/lfactors-package.R
+b1682ae9e73625bdaa2086784eb0d28e *R/llevels.R
+a86fb79ff19a784c021c7162e2529dd5 *R/mlfactor.R
 c2fae0c04feee8126dd864df4bcf4d81 *R/print.lfactor.R
 efbc277c460f7f5ccbcb25106038ef60 *R/relevel.R
 f8b43d6770bf9aea37c70a596dda3897 *R/subset.R
 d071fd01a2f24b614e18edb7aabec8bf *R/switchllevels.R
 817c9dfb2e32b0a35c2fca203f9427f1 *R/zzz.R
-f7bc6e12330aed8a971c114bd545ff53 *inst/NEWS.Rd
-7319109da3af422604a82a62deef100c *man/as.factor.lfactor.Rd
-ba47bc423fe429dd1b2b546290b6835a *man/as.integer.lfactor.Rd
-604507c926fee6395f43fe246361f8f3 *man/as.numeric.lfactor.Rd
+e5474dd511beaae30620f22836c24636 *inst/NEWS.Rd
+aec7d4f404a9c2ad30e86c81cd2b6557 *man/as.factor.lfactor.Rd
+adf981727d8be2314be7ec26d8fb59b3 *man/as.integer.lfactor.Rd
+c13eafd113fec7ebb2d5663323e7a996 *man/as.numeric.lfactor.Rd
 b8820bd3402db48f6fe78013eb0f5051 *man/examples/as.num.R
 c74444d7e9b4c26045ff91660a6c54d8 *man/examples/lfactor.R
-76644eb2889bf2d384f1ffa8f689bd1b *man/inlf.Rd
-47c3406c373b0463ad112f5565942392 *man/lfactor.Rd
-26088a7b82552110cf326c25c721eada *man/lfactors-package.Rd
-11281402960d1a15825b00d9020837d2 *man/llevels.Rd
-9bcd611b4aa186a1b25437191390c850 *man/mlfactor.Rd
+3b3479bc2b541039399b1ce7c959826d *man/inlf.Rd
+f4a6f69c4475dd9eb404b0fde5bd45ab *man/lfactor.Rd
+94df7b70de87e60c06e3f9d591b79c2d *man/lfactors-package.Rd
+5edfc512e37d116f1adcb6388b221e98 *man/llevels.Rd
+905c2c748edfe3faf9d368912422b677 *man/mlfactor.Rd
 4f2745558b3725b2303b0f715162ddce *tests/testthat.R
-77926ad4f3cefe6c8b3787457a551cd7 *tests/testthat/test-equals.R
+25fd504736e277efd7112b9f9757fc34 *tests/testthat/test-equals.R
