@@ -3,7 +3,3 @@
 #' @import utils
 
 setOldClass("lfactor")
-#setGeneric("match")
-#setGeneric("%in%")
-#setGeneric("as.factor")
-
