@@ -1,13 +1,4 @@
-#' factor from an lfactor
-#' @method as.factor lfactor
-#' @description
-#' Returns an \code{\link[base]{factor}} from an \code{\link{lfactor}}.
-#' 
-#' @param x the lfactor to be coerced to a factor
-#' @details
-#' simply drops the numeric levels from the lfactor and returns a normal factor.
-#'
-#' @seealso \code{\link[base]{as.factor}}
+# Rd in man, not roxygen
 #' @export
 as.factor.lfactor <- function(x) {
   class(x) <- "factor"
