@@ -1,8 +1,8 @@
-#' @title Lfactors
+#' @title lfactors
 #'
 #' @description \code{lfactor} creates a factor that can be compared to its levels or labels.
 #'
-#' @param x a numeric or character vector of data. levels of x can be taken
+#' @param x a numeric or character vector of data. Levels of x can be taken
 #'          either from levels or labels.
 #' @param levels a numeric vector of levels in x. Note that, unlike
 #'               \code{factor}, these must be numeric. 
@@ -10,29 +10,29 @@
 #'               characters that cannot be cast as numeric or characters that
 #'               are equal to the level, of the same index,
 #'               when cast as numeric.
-#' @param \dots arguments passed to \code{\link[base]{factor}}.
+#' @param \dots arguments passed to \ifelse{latex}{\code{factor}}{\code{\link[base]{factor}}}
 #'
 #' @details 
 #' An lfactor can be compared to the levels or the labels
-#' (see the `Examples'). Because of that,
-#' the levels must be numeric and the labels must be either not castable
+#' (see the Examples). Because of that,
+#' the levels must be numeric, and the labels must be either not castable
 #' as numeric or equal to
 #' the levels of the same index when cast as numeric.
 #' 
-#' An lfactor is, essentialy, a factor that remembers the levels
+#' An lfactor is, essentially, a factor that remembers the levels
 #' as well as the labels argument.
 #' Note that all of the arguments are passed to
-#' \code{\link[base]{factor}}. Because lfactor imposes
+#' \ifelse{latex}{\code{factor}}{\code{\link[base]{factor}}}. Because lfactor imposes
 #' some additional constraints on the types of levels and labels
 #' and stores additional information,
-#' an lfactor both uses more memory than a factor--because it stores both
-#' labels and levels--and is,
+#' an lfactor uses more memory than a factor---because it stores both
+#' labels and levels---and is,
 #' in some ways, more limited than a factor.
 #' 
 #' @return
-#' An object of class lfactor that also implement \code{\link[base]{factor}}
+#' An object of class lfactor that also implements \ifelse{latex}{\code{factor}}{\code{\link[base]{factor}}}
 #'
-#' @seealso \code{\link[base]{factor}}
+#' @seealso \ifelse{latex}{\code{factor}}{\code{\link[base]{factor}}}
 #' 
 #' @example man/examples/lfactor.R
 #' 
