@@ -1,10 +1,4 @@
-#' \code{\link[base]{match}} function for lfactors
-#' @param x same as \code{\link[base]{match}}
-#' @param table same as \code{\link[base]{match}}
-#' @param nomatch same as \code{\link[base]{match}}
-#' @param incomparables same as \code{\link[base]{match}}
-#' @details Allows match to work when the `x' or `table' arguments in a call to match are lfactors.
-#' @seealso \code{\link[base]{match}}
+# Rd in man, not roxygen
 #' @export
 mlfactor <- function(x, table, nomatch=NA_integer_, incomparables=NULL) {
   if(inherits(x, "lfactor")) {
